<resources>
    <string name="app_name">WeatherWear</string>
    <string name="location"><stroke>Location</stroke></string>
    <string name="actualTemp"><u>Actual</u></string>
    <string name="feelsLike"><u>Feels Like</u></string>
    <string name="actualTempValue">Actual Temperature Value</string>
    <string name="feelsLikeTempValue">Feels Like Temperature Value</string>
    <string name="condition">Condition</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendationsList">Recommendations List</string>
    <string name="textview">TextView</string>
    <string name="newRecommendation">New Recommendation</string>
    <string name="clothingString">Clothing…</string>
    <string name="conditionsString">Conditions…</string>
    <string name="minimumTemp">Minimum Temp.</string>
    <string name="maximumTemp">Maximum Temp.</string>
    <string name="cancelString">Cancel</string>
    <string name="confirmString">Confirm</string>
</resources>